apps/overlays/huston/infra/longhorn-config/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.lab.markaplay.net`)
      kind: Rule
      services:
        - name: longhorn-frontend
          kind: Service
          port: 80
  tls:
    secretName: longhorn-cert
